@@ -127,7 +127,14 @@ static const struct {
 	    "background color for a tab", 1),
     STRG( Rs_cwd, "workingDirectory", "wd", "dir",
 	    "Working directory to open new tabs in", 1 ),
+    STRG(Rs_holdExit, "holdExit", "hold", "Always|Clean|NotClean|Never",
+	    "Keep tab open after child exits, based on childs exit status", 1 ),
+    STRG(Rs_holdExitTxt, "holdExitText", "het",
+	"string", "text to show while holding the terminal", 1),
+    STRG(Rs_holdExitTtl, "holdExitTitle", "heT",
+	"string", "Tab title of exited tabs", 1),
 
+    /* Global options */
     STRG(Rs_maxTabWidth, "maxTabWidth", "mtw", "number", "maximum (char) title width of all tabs", 0),
     STRG(Rs_minVisibleTabs, "minVisibleTabs", "mvt", "number", "minimum # of tabs to keep visible (requires xftpfn)", 0),
     BOOL( "highlightTabOnBell", "htb", Opt2_hlTabOnBell,
@@ -464,12 +471,6 @@ static const struct {
 	    "override_redirect flag" ),
     STRG(Rs_bellCommand, "bellCommand", "blc",
 	"string", "command to execute instead of beeping", 0),
-    BOOL( "holdExit", "hold", Opt2_holdExit,
-	    "hold after terminal exits" ),
-    STRG(Rs_holdExitText, "holdExitText", "het",
-	"string", "text to show while holding the terminal", 0),
-    STRG(Rs_holdExitTitle, "holdExitTitle", "heT",
-	"string", "Tab title of exited tabs", 0),
     STRG(Rs_desktop, "desktop", "desktop",
 	"number", "desktop to place the program", 0),
     BOOL( "broadcast", "bcst", Opt2_broadcast,
